# ecs-grpc

./: .gitignore  BUILD.bazel  Dockerfile  Makefile  WORKSPACE  bazel-bin  bazel-ecs-grpc  bazel-out  bazel-testlogs  go.mod  main.tf
.circleci/: config.yml  run-build-locally.sh
color_client/: BUILD.bazel  Dockerfile  main.go
color_server/: BUILD.bazel  Dockerfile  main.go
color_server/color/: BUILD.bazel
modules/app/: security.tf  task_def_client.json.tpl  task_def_server.json.tpl
scripts/: build.sh  ci_trigger.sh  search_target_services.sh
services/color_client/: BUILD.bazel  Dockerfile  main.go
services/color_server/: BUILD.bazel  Dockerfile  main.go
services/color_server/color/: BUILD.bazel
