load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "color_proto",
    srcs = ["color.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "color_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/abe-nagisa/ecs-grpc/color_server/color",
    proto = ":color_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":color_go_proto"],
    importpath = "github.com/abe-nagisa/ecs-grpc/color_server/color",
    visibility = ["//visibility:public"],
)
